--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,97 @@
 /* Custom fonts */
 @import url('https://fonts.googleapis.com/css2?family=Lora:wght@700&family=Montserrat:wght@400;500;600;700&family=Open+Sans:wght@400;700&display=swap');
 
+/* #E1E1E1, #AFAFAF, #808080, #545454 and #2B2B2B */
 /* My CSS Varibles */
 :root {
   --lora: 'Lora', serif;
   --montserrat: 'Montserrat', sans-serif;
   --opensans: 'Open Sans', sans-serif;
+
+  /* COLORS */
+  --dark-100: #2B2B2B;
+  --dark-75: #545454;
+  --gray-100: #808080;
+  --gray-50: #AFAFAF;
+  --gray-25: #E1E1E1;
 }
 
 body {
   font-family: var(--montserrat);
 }
+
+nav {
+  width: 100%;
+  padding: 12px 0;
+}
+
+nav .navbar-flex {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex: 0 1 100%;
+  flex-wrap: wrap;
+}
+
+nav .navbar-flex .navigation-brand {
+  width: 25%;
+  height: 100%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+
+nav .navbar-flex .navigation-brand a {
+  font-size: 24px;
+  font-weight: 700;
+  color: var(--dark-100);
+}
+
+nav .navbar-flex .navigation-links {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+nav .navbar-flex .navigation-links ul {
+  margin: 0 auto;
+  width: auto;
+  height: 100%;
+  list-style: none;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 28px;  
+}
+
+nav .navbar-flex .navigation-links ul li a {
+  text-decoration: none;
+  font-family: var(--montserrat);
+  font-weight: 600;
+  font-size: 16px;
+  color: var(--dark-100);
+}
+
+nav .navbar-flex .navigation-social-media {
+  width: 25%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  gap: 20px;
+}
+
+nav .navbar-flex .navigation-social-media a {
+  text-decoration: none;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: var(--dark-100);
+}
+
+
 
 .montserrat {
   font-family: var(--montserrat) !important;
