--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,6 +99,62 @@ nav .navbar-flex .navigation-social-media a img {
   transform: translate(-50%, -50%);
 }
 
+/* MAIN - Hero Content */
+main {
+  /* background: coral; */
+  padding: 124px 4px;
+}
+
+main .hero-text {
+  width: auto;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+main .hero-text h1 {
+  line-height: 54px;
+  margin-bottom: 20px;
+  font-size: 42px;
+  font-weight: 600;
+}
+
+main .hero-text p {
+  max-width: 590px;
+  font-size: 20px;
+  margin-bottom: 36px;
+}
+
+main .hero-text .btn-hubungi {
+  text-align: center;
+  text-decoration: none;
+  color: #fff;
+  width: 40%;
+  height: 100%;
+  padding: 14px 20px;
+  border-radius: 24px;
+  font-weight: 500;
+  background-color: var(--dark-100);
+}
+
+main .hero-banner {
+  /* background-color: aquamarine; */
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+
+main .hero-banner img {
+  width: 540px;
+  height: auto;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 
 
 
