--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,32 +100,32 @@ nav .navbar-flex .navigation-social-media a img {
 }
 
 /* MAIN - Hero Content */
-main {
+#hero {
   /* background: coral; */
   padding: 124px 4px;
 }
 
-main .hero-text {
+#hero .hero-text {
   width: auto;
   height: auto;
   display: flex;
   flex-direction: column;
 }
 
-main .hero-text h1 {
+#hero .hero-text h1 {
   line-height: 54px;
   margin-bottom: 20px;
   font-size: 42px;
   font-weight: 600;
 }
 
-main .hero-text p {
+#hero .hero-text p {
   max-width: 590px;
   font-size: 20px;
   margin-bottom: 36px;
 }
 
-main .hero-text .btn-hubungi {
+#hero .hero-text .btn-hubungi {
   text-align: center;
   text-decoration: none;
   color: #fff;
@@ -137,7 +137,7 @@ main .hero-text .btn-hubungi {
   background-color: var(--dark-100);
 }
 
-main .hero-banner {
+#hero .hero-banner {
   /* background-color: aquamarine; */
   width: 100%;
   height: 100%;
@@ -146,7 +146,7 @@ main .hero-banner {
   position: relative;
 }
 
-main .hero-banner img {
+#hero .hero-banner img {
   width: 540px;
   height: auto;
   position: absolute;
@@ -156,8 +156,19 @@ main .hero-banner img {
 }
 
 
+/* Services Style */
+#services {
+  padding: 124px 0;
+  background: #F1F1F1;
+}
 
-
+#services .heading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: -50px;
+}
 
 
 
