--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,6 +170,71 @@ nav .navbar-flex .navigation-social-media a img {
   margin-top: -50px;
 }
 
+#services .heading h2 {
+  font-size: 40px;
+  font-family: var(--opensans);
+  font-weight: 700;
+  color: var(--dark-100);
+}
+
+#services .heading p {
+  margin-top: -5px;
+  font-size: 22px;
+  font-family: var(--opensans);
+  font-weight: 400;
+  color: var(--dark-75);
+}
+
+#services .layanan {
+  width: 100%;
+  height: auto;
+  padding: 40px 8px 0 8px;
+  /* background-color: coral; */
+}
+
+#services .layanan .card-service {
+  width: 412px;
+  height: 486px;
+  background-color: #fff;
+  box-shadow: 4px 6px 16px 2px rgba(0, 0, 0, 0.25);
+  border-radius: 24px;
+  overflow: hidden;
+}
+
+#services .layanan .card-service .c-head {
+  width: 100%;
+  height: 218px;
+  background-color: #808080;
+}
+
+#services .layanan .card-service .c-head img {
+  object-fit: cover;
+  object-position: center;
+}
+
+#services .layanan .card-service .c-body {
+  width: 100%;
+  height: 100%;
+  padding: 20px 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+  align-items: center;
+  /* background-color: lightgreen; */
+}
+
+#services .layanan .card-service .c-body h3 {
+  text-align: center;
+  font-weight: 600;
+  font-size: 28px;
+  margin: 12px 0 20px 0;
+}
+
+#services .layanan .card-service .c-body p {
+  line-height: 26px;
+  font-size: 18px;
+  text-align: center;
+}
 
 
 /* ETC */
