--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,6 +237,55 @@ nav .navbar-flex .navigation-social-media a img {
 }
 
 
+/* Works Style */
+#works {
+  padding: 124px 0 52px 0;
+  background: #E1E1E1;
+}
+
+#works .heading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: -50px;
+}
+
+#works .heading h2 {
+  font-size: 40px;
+  font-family: var(--opensans);
+  font-weight: 700;
+  color: var(--dark-100);
+}
+
+#works .heading p {
+  margin-top: -5px;
+  font-size: 22px;
+  font-family: var(--opensans);
+  font-weight: 400;
+  color: var(--dark-75);
+}
+
+#works .my-works {
+  width: 100%;
+  height: auto;
+  background-color: lightsalmon;
+  padding: 30px 0;
+}
+
+#works .my-works .image-parent {
+  width: 100%;
+  height: 100%;
+  padding: 8px;
+  background-color: #fff;
+  display: flex;
+  justify-content: stretch;
+  align-items: stretch;
+}
+
+
+
+
 /* ETC */
 .montserrat {
   font-family: var(--montserrat) !important;
