--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -513,7 +513,76 @@ nav .navbar-flex .navigation-social-media a img {
   height: 52px;
 }
 
+/* Footer Style */
+footer {
+  padding: 0;
+  width: 100%;
+  height: 220px;
+  background: var(--dark-100);
+  display: flex;
+  align-items: center;
+  position: relative;
+}
 
+footer .footer-content {
+  width: auto;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  /* background-color: lightseagreen; */
+}
+
+footer .footer-content .footer-brand {
+  font-size: 24px;
+  font-weight: 700;
+  text-decoration: none;
+  color: #fff;
+}
+
+footer .footer-content .footer-links {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background-color: orange; */
+}
+
+footer .footer-content .footer-links ul {
+  margin: auto;
+  display: flex;
+  gap: 28px;
+  list-style-type: none;
+}
+
+footer .footer-content .footer-links ul li {
+  font-size: 18px;
+  font-weight: 500;
+}
+
+footer .footer-content .footer-links ul li a {
+  text-decoration: none;
+  color: #fff;
+}
+
+footer .footer-content .footer-links ul li a:hover {
+  color: var(--gray-100);
+}
+
+footer .copyright {
+  /* background-color: red; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  font-size: 16px;
+  top: 85%;
+  text-align: center;
+  transform: translate(-50%, -50%);
+  left: 50%;
+}
+
+  
 /* ETC */
 .montserrat {
   font-family: var(--montserrat) !important;
