--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -61,4 +61,63 @@
     font-size: 14px;
     color: var(--dark-100);
   }
+
+
+
+  /* HERO */
+  #hero .reversing {
+    display: flex;
+    flex-direction: column-reverse !important;
+    /* background-color: red; */
+  }
+
+  #hero .hero-text {
+    margin-top: 60px;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  #hero .hero-text h1 {
+    line-height: 46px;
+    margin-bottom: 20px;
+    font-size: 34px;
+    text-align: center;
+  }
+  
+  #hero .hero-text p {
+    line-height: 40px;
+    max-width: 590px;
+    font-size: 18px;
+    text-align: center;
+    margin-bottom: 36px;
+  }
+  
+  #hero .hero-text .btn-hubungi {
+    width: 60%;
+  }
+
+
+
+
+  #hero .hero-banner {
+    /* background-color: aquamarine; */
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    margin: 100px 0 180px 0;
+  }
+  
+  #hero .hero-banner img {
+    /* background: #000; */
+    width: 400px;
+    object-position: center;
+    object-fit: cover;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
