--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -125,8 +125,7 @@
 
   /* Services */
   #services {
-    padding: 124px 0 52px 0;
-    background: #F1F1F1;
+    padding: 100px 0 50px 0;
   }
   
   #services .heading {
@@ -138,18 +137,12 @@
   }
   
   #services .heading h2 {
-    font-size: 40px;
-    font-family: var(--opensans);
-    font-weight: 700;
-    color: var(--dark-100);
+    font-size: 32px;
   }
   
   #services .heading p {
     margin-top: -5px;
-    font-size: 22px;
-    font-family: var(--opensans);
-    font-weight: 400;
-    color: var(--dark-75);
+    font-size: 16px;
   }
   
   #services .layanan {
@@ -160,29 +153,19 @@
   }
   
   #services .layanan .card-service {
-    width: 412px;
-    height: 506px;
-    background-color: #fff;
-    box-shadow: 4px 6px 16px 2px rgba(0, 0, 0, 0.25);
-    border-radius: 24px;
-    overflow: hidden;
+    width: 100%;
+    height: 480px;
   }
   
   #services .layanan .card-service .c-head {
     width: 100%;
     height: 218px;
-    background-color: #808080;
-  }
-  
-  #services .layanan .card-service .c-head img {
-    object-fit: cover;
-    object-position: center;
   }
   
   #services .layanan .card-service .c-body {
     width: 100%;
     height: 100%;
-    padding: 20px 40px;
+    padding: 20px 20px;
     display: flex;
     flex-direction: column;
     justify-content: stretch;
@@ -193,13 +176,13 @@
   #services .layanan .card-service .c-body h3 {
     text-align: center;
     font-weight: 600;
-    font-size: 28px;
+    font-size: 24px;
     margin: 12px 0 20px 0;
   }
   
   #services .layanan .card-service .c-body p {
     line-height: 26px;
-    font-size: 18px;
+    font-size: 16px;
     text-align: center;
   }
 }
