--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -63,8 +63,6 @@
     color: var(--dark-100);
   }
 
-
-
   /* HERO */
   #hero .reversing {
     display: flex;
@@ -78,7 +76,7 @@
     justify-content: center;
     align-items: center;
   }
-  
+
   #hero .hero-text h1 {
     max-width: 800px;
     line-height: 46px;
@@ -86,7 +84,7 @@
     font-size: 30px;
     text-align: center;
   }
-  
+
   #hero .hero-text p {
     line-height: 40px;
     max-width: 590px;
@@ -94,7 +92,7 @@
     text-align: center;
     margin-bottom: 36px;
   }
-  
+
   #hero .hero-text .btn-hubungi {
     width: 60%;
   }
@@ -108,7 +106,7 @@
     position: relative;
     margin: 100px 0 180px 0;
   }
-  
+
   #hero .hero-banner img {
     /* background: #000; */
     width: 400px;
@@ -119,15 +117,11 @@
     left: 50%;
   }
 
-
-
-
-
   /* Services */
   #services {
     padding: 100px 0 50px 0;
   }
-  
+
   #services .heading {
     display: flex;
     justify-content: center;
@@ -135,33 +129,33 @@
     flex-direction: column;
     margin-top: -50px;
   }
-  
+
   #services .heading h2 {
     font-size: 32px;
   }
-  
+
   #services .heading p {
     margin-top: -5px;
     font-size: 16px;
   }
-  
+
   #services .layanan {
     width: 100%;
     height: auto;
     padding: 40px 8px 0 8px;
     /* background-color: coral; */
   }
-  
+
   #services .layanan .card-service {
     width: 100%;
     height: 480px;
   }
-  
+
   #services .layanan .card-service .c-head {
     width: 100%;
     height: 218px;
   }
-  
+
   #services .layanan .card-service .c-body {
     width: 100%;
     height: 100%;
@@ -172,17 +166,87 @@
     align-items: center;
     /* background-color: lightgreen; */
   }
-  
+
   #services .layanan .card-service .c-body h3 {
     text-align: center;
     font-weight: 600;
     font-size: 24px;
     margin: 12px 0 20px 0;
   }
-  
+
   #services .layanan .card-service .c-body p {
     line-height: 26px;
     font-size: 16px;
     text-align: center;
+  }
+
+  /* Works Style */
+  #works {
+    padding: 124px 0 52px 0;
+    background: #e1e1e1;
+  }
+
+  #works .heading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: -50px;
+  }
+
+  #works .heading h2 {
+    font-size: 40px;
+    font-family: var(--opensans);
+    font-weight: 700;
+    color: var(--dark-100);
+  }
+
+  #works .heading p {
+    margin-top: -5px;
+    font-size: 22px;
+    font-family: var(--opensans);
+    font-weight: 400;
+    color: var(--dark-75);
+  }
+
+  #works .my-works {
+    width: 100%;
+    height: auto;
+    /* background-color: lightsalmon; */
+    padding: 30px 0;
+  }
+
+  #works .my-works .image-parent {
+    width: 100%;
+    height: 100%;
+    padding: 8px;
+    background-color: #fff;
+    display: flex;
+    justify-content: stretch;
+    align-items: stretch;
+  }
+
+  #works .my-works .image-parent img {
+    object-fit: cover;
+    object-position: center;
+  }
+
+  #works .my-works .btn-cta {
+    border-radius: 16px;
+    padding: 20px 60px;
+    background-color: transparent;
+    color: var(--dark-100);
+    border: 2px solid var(--dark-100);
+    text-decoration: none;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 600;
+    transition: all 0.1s ease-in-out;
+  }
+
+  #works .my-works .btn-cta:hover {
+    background-color: var(--dark-100);
+    color: var(--gray-25);
+    transition: all 0.1s ease-in-out;
   }
 }
