--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -63,6 +63,10 @@
     color: var(--dark-100);
   }
 
+
+
+
+  
   /* HERO */
   #hero .reversing {
     display: flex;
@@ -117,6 +121,10 @@
     left: 50%;
   }
 
+
+
+  
+  
   /* Services */
   #services {
     padding: 100px 0 50px 0;
@@ -180,73 +188,31 @@
     text-align: center;
   }
 
+
+
+
+  
   /* Works Style */
   #works {
-    padding: 124px 0 52px 0;
-    background: #e1e1e1;
-  }
-
-  #works .heading {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin-top: -50px;
+    padding: 100px 0 50px 0;
   }
 
   #works .heading h2 {
-    font-size: 40px;
-    font-family: var(--opensans);
-    font-weight: 700;
-    color: var(--dark-100);
+    font-size: 32px;
   }
 
   #works .heading p {
     margin-top: -5px;
-    font-size: 22px;
-    font-family: var(--opensans);
-    font-weight: 400;
-    color: var(--dark-75);
-  }
-
-  #works .my-works {
-    width: 100%;
-    height: auto;
-    /* background-color: lightsalmon; */
-    padding: 30px 0;
-  }
-
-  #works .my-works .image-parent {
-    width: 100%;
-    height: 100%;
-    padding: 8px;
-    background-color: #fff;
-    display: flex;
-    justify-content: stretch;
-    align-items: stretch;
-  }
-
-  #works .my-works .image-parent img {
-    object-fit: cover;
-    object-position: center;
+    font-size: 16px;
   }
 
   #works .my-works .btn-cta {
-    border-radius: 16px;
-    padding: 20px 60px;
-    background-color: transparent;
-    color: var(--dark-100);
-    border: 2px solid var(--dark-100);
-    text-decoration: none;
-    text-align: center;
-    font-size: 18px;
-    font-weight: 600;
-    transition: all 0.1s ease-in-out;
+    padding: 14px 60px;
+    border: 1px solid var(--dark-100);
+    font-size: 16px;
   }
 
-  #works .my-works .btn-cta:hover {
-    background-color: var(--dark-100);
-    color: var(--gray-25);
-    transition: all 0.1s ease-in-out;
+  #works .my-works .btn-cta:active {
+    background-color: rgba(0, 0, 0, 0.5);
   }
 }
