--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -204,7 +204,6 @@
     background-color: rgba(0, 0, 0, 0.5);
   }
 
-  
   /* About Style */
   #about {
     padding: 80px 0;
@@ -243,5 +242,168 @@
     max-width: 350px;
     font-size: 18px;
     line-height: 28px;
+  }
+
+  /* Contact Style */
+  #contact {
+    padding: 124px 0 60px 0;
+    width: 100%;
+    height: 1320px;
+    background-image: url("../img/contact/background.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+
+  #contact .heading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: -50px;
+  }
+
+  #contact .heading h2 {
+    font-size: 40px;
+    font-family: var(--opensans);
+    font-weight: 700;
+    color: var(--dark-100);
+  }
+
+  #contact .heading p {
+    margin-top: -5px;
+    font-size: 22px;
+    font-family: var(--opensans);
+    font-weight: 400;
+    color: var(--dark-75);
+  }
+
+  #contact .card-contact {
+    width: 1064px;
+    height: auto;
+    background-color: #fff;
+    border-radius: 24px;
+  }
+
+  #contact .card-contact .contact-item {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    padding-bottom: 10px;
+    /* background-color: cyan; */
+  }
+
+  #contact .card-contact .contact-item h4 {
+    /* background-color: red; */
+    width: 20%;
+    font-size: 18px;
+    font-weight: 600;
+  }
+
+  #contact .card-contact .contact-item p {
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+  }
+
+  #contact .card-contact .contact-item p .links {
+    text-decoration: none;
+    color: var(--dark-100);
+  }
+
+  #contact .card-contact .contact-item p .links:hover {
+    text-decoration: underline;
+  }
+
+  #contact .card-form {
+    height: 686px;
+    width: 100%;
+    background-color: #fff;
+    border-radius: 24px;
+    position: relative;
+  }
+
+  #contact .card-form .accent-pills {
+    width: 286px;
+    height: 60px;
+    border-radius: 24px;
+    background-color: #545454;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  #contact .card-form .accent-pills p {
+    line-height: 60px;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 600;
+    text-align: center;
+  }
+
+  #contact .card-form .custom-form {
+    width: auto;
+    height: 100%;
+    padding: 40px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* background-color: red; */
+  }
+
+  #contact .card-form .custom-form .controlled-form {
+    width: 75%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    /* background-color: coral; */
+  }
+
+  #contact .card-form .custom-form .controlled-form .custom-label {
+    font-size: 16px;
+    font-weight: 500;
+    margin-bottom: 12px;
+  }
+
+  #contact .card-form .custom-form .controlled-form .custom-input {
+    border-radius: 8px;
+    padding: 20px;
+    color: #000;
+    font-size: 18px;
+    border: none;
+    background-color: #d9d9d9;
+    height: 68px;
+  }
+
+  #contact .card-form .custom-form .controlled-form .custom-textarea {
+    resize: none;
+    border-radius: 8px;
+    padding: 20px;
+    color: #000;
+    font-size: 18px;
+    border: none;
+    background-color: #d9d9d9;
+    height: 128px;
+  }
+
+  #contact .card-form .custom-form .btn-kontak {
+    width: 20%;
+    border: none;
+    border-radius: 12px;
+    font-size: 16px;
+    background-color: var(--dark-75);
+    color: #fff;
+    font-weight: 500;
+    height: 52px;
+    transition: 0.3s all ease-in-out;
+  }
+
+  #contact .card-form .custom-form .btn-kontak:hover {
+    background-color: var(--dark-100);
+    transition: 0.3s all ease-in-out;
   }
 }
