--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -244,81 +244,59 @@
     line-height: 28px;
   }
 
+
+
+
+
   /* Contact Style */
   #contact {
-    padding: 124px 0 60px 0;
+    padding: 100px 0 50px 0;
     width: 100%;
-    height: 1320px;
+    height: 100%;
     background-image: url("../img/contact/background.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
   }
 
-  #contact .heading {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin-top: -50px;
-  }
-
   #contact .heading h2 {
-    font-size: 40px;
-    font-family: var(--opensans);
-    font-weight: 700;
-    color: var(--dark-100);
+    font-size: 32px;
   }
 
   #contact .heading p {
     margin-top: -5px;
-    font-size: 22px;
-    font-family: var(--opensans);
-    font-weight: 400;
-    color: var(--dark-75);
+    font-size: 16px;
   }
 
   #contact .card-contact {
-    width: 1064px;
-    height: auto;
-    background-color: #fff;
-    border-radius: 24px;
+    width: 100%;
+    height: 100%;
   }
 
   #contact .card-contact .contact-item {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: stretch;
-    padding-bottom: 10px;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-bottom: 0;
     /* background-color: cyan; */
   }
 
   #contact .card-contact .contact-item h4 {
     /* background-color: red; */
-    width: 20%;
-    font-size: 18px;
-    font-weight: 600;
+    width: auto;
+    font-size: 16px;
   }
 
   #contact .card-contact .contact-item p {
-    text-align: center;
-    font-size: 16px;
-    font-weight: 400;
+    text-align: justify;
+    font-size: 14px;
   }
 
-  #contact .card-contact .contact-item p .links {
-    text-decoration: none;
-    color: var(--dark-100);
-  }
-
-  #contact .card-contact .contact-item p .links:hover {
+  #contact .card-contact .contact-item p .links:active {
     text-decoration: underline;
   }
 
   #contact .card-form {
-    height: 686px;
+    height: 586px;
     width: 100%;
     background-color: #fff;
     border-radius: 24px;
@@ -326,28 +304,19 @@
   }
 
   #contact .card-form .accent-pills {
-    width: 286px;
-    height: 60px;
-    border-radius: 24px;
-    background-color: #545454;
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 180px;
+    height: 50px;
   }
 
   #contact .card-form .accent-pills p {
-    line-height: 60px;
-    color: #fff;
-    font-size: 18px;
-    font-weight: 600;
-    text-align: center;
+    line-height: 50px;
+    font-size: 14px;
   }
 
   #contact .card-form .custom-form {
-    width: auto;
+    width: 100%;
     height: 100%;
-    padding: 40px 0;
+    padding: 20px 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -356,7 +325,7 @@
   }
 
   #contact .card-form .custom-form .controlled-form {
-    width: 75%;
+    width: 85%;
     height: auto;
     display: flex;
     flex-direction: column;
@@ -364,45 +333,28 @@
   }
 
   #contact .card-form .custom-form .controlled-form .custom-label {
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 500;
-    margin-bottom: 12px;
+    margin-bottom: 10px;
   }
 
   #contact .card-form .custom-form .controlled-form .custom-input {
-    border-radius: 8px;
     padding: 20px;
-    color: #000;
-    font-size: 18px;
-    border: none;
-    background-color: #d9d9d9;
-    height: 68px;
+    font-size: 16px;
+    height: 48px;
   }
 
   #contact .card-form .custom-form .controlled-form .custom-textarea {
-    resize: none;
-    border-radius: 8px;
-    padding: 20px;
-    color: #000;
-    font-size: 18px;
-    border: none;
-    background-color: #d9d9d9;
-    height: 128px;
+    height: 138px;
   }
 
   #contact .card-form .custom-form .btn-kontak {
-    width: 20%;
-    border: none;
-    border-radius: 12px;
-    font-size: 16px;
-    background-color: var(--dark-75);
-    color: #fff;
-    font-weight: 500;
-    height: 52px;
-    transition: 0.3s all ease-in-out;
+    width: 45%;
+    font-size: 14px;
+    height: 42px;
   }
 
-  #contact .card-form .custom-form .btn-kontak:hover {
+  #contact .card-form .custom-form .btn-kontak:active {
     background-color: var(--dark-100);
     transition: 0.3s all ease-in-out;
   }
