--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -500,3 +500,431 @@
     transform: translate(-50%, -50%);
   }
 }
+
+@media screen and (max-width: 768px) {
+  /* Navigation */
+  nav .navbar-flex {
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  nav .navbar-flex .navigation-brand {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 6px;
+    order: 1;
+  }
+
+  nav .navbar-flex .navigation-social-media {
+    width: 100%;
+    justify-content: center;
+    gap: 30px;
+    order: 2;
+    margin: 10px 0;
+  }
+
+  header .sm-divider {
+    width: 100%;
+    height: 1px;
+    background-color: rgba(0, 0, 0, 0.1);
+  }
+
+  nav .navbar-flex .navigation-links {
+    /* background: cyan; */
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    order: 2;
+    padding: 8px 0;
+  }
+
+  nav .navbar-flex .navigation-links ul {
+    /* background: red; */
+    padding: 0 0;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 24px;
+  }
+
+  nav .navbar-flex .navigation-links ul li {
+    /* background-color: green; */
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+
+  nav .navbar-flex .navigation-links ul li a {
+    text-decoration: none;
+    font-family: var(--montserrat);
+    font-weight: 600;
+    font-size: 14px;
+    color: var(--dark-100);
+  }
+
+  /* HERO */
+  #hero .reversing {
+    display: flex;
+    flex-direction: column-reverse !important;
+    /* background-color: red; */
+  }
+
+  #hero .hero-text {
+    margin-top: 60px;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #hero .hero-text h1 {
+    max-width: 800px;
+    line-height: 46px;
+    margin-bottom: 20px;
+    font-size: 30px;
+    text-align: center;
+  }
+
+  #hero .hero-text p {
+    line-height: 40px;
+    max-width: 590px;
+    font-size: 18px;
+    text-align: center;
+    margin-bottom: 36px;
+  }
+
+  #hero .hero-text .btn-hubungi {
+    width: 60%;
+  }
+
+  #hero .hero-banner {
+    /* background-color: aquamarine; */
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    margin: 100px 0 180px 0;
+  }
+
+  #hero .hero-banner img {
+    /* background: #000; */
+    width: 400px;
+    object-position: center;
+    object-fit: cover;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+  }
+
+  /* Services */
+  #services {
+    padding: 100px 0 50px 0;
+  }
+
+  #services .heading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: -50px;
+  }
+
+  #services .heading h2 {
+    font-size: 32px;
+  }
+
+  #services .heading p {
+    margin-top: -5px;
+    font-size: 16px;
+  }
+
+  #services .layanan {
+    width: 100%;
+    height: auto;
+    padding: 40px 8px 0 8px;
+    /* background-color: coral; */
+  }
+
+  #services .layanan .card-service {
+    width: 100%;
+    height: 480px;
+  }
+
+  #services .layanan .card-service .c-head {
+    width: 100%;
+    height: 218px;
+  }
+
+  #services .layanan .card-service .c-body {
+    width: 100%;
+    height: 100%;
+    padding: 20px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
+    align-items: center;
+    /* background-color: lightgreen; */
+  }
+
+  #services .layanan .card-service .c-body h3 {
+    text-align: center;
+    font-weight: 600;
+    font-size: 24px;
+    margin: 12px 0 20px 0;
+  }
+
+  #services .layanan .card-service .c-body p {
+    line-height: 26px;
+    font-size: 16px;
+    text-align: center;
+  }
+
+  /* Works Style */
+  #works {
+    padding: 100px 0 50px 0;
+  }
+
+  #works .heading h2 {
+    font-size: 32px;
+  }
+
+  #works .heading p {
+    margin-top: -5px;
+    font-size: 16px;
+  }
+
+  #works .my-works .btn-cta {
+    padding: 14px 60px;
+    border: 1px solid var(--dark-100);
+    font-size: 16px;
+  }
+
+  #works .my-works .btn-cta:active {
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+
+  /* About Style */
+  #about {
+    padding: 80px 0;
+  }
+
+  #about .biography {
+    /* background-color: coral; */
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  #about .bio-image {
+    width: 312px;
+    height: 312px;
+  }
+
+  #about .biography .bio-image img {
+    width: 480px;
+    object-fit: cover;
+    object-position: -95px -100px;
+  }
+
+  #about .biography .bio-text {
+    margin: 30px 0;
+  }
+
+  #about .biography .bio-text h3 {
+    font-size: 32px;
+    margin-bottom: 24px;
+  }
+
+  #about .biography .bio-text p {
+    max-width: 350px;
+    font-size: 18px;
+    line-height: 28px;
+  }
+
+  /* Contact Style */
+  #contact {
+    padding: 100px 0 50px 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("../img/contact/background.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+
+  #contact .heading h2 {
+    font-size: 32px;
+  }
+
+  #contact .heading p {
+    margin-top: -5px;
+    font-size: 16px;
+  }
+
+  #contact .card-contact {
+    width: 100%;
+    height: 100%;
+  }
+
+  #contact .card-contact .contact-item {
+    flex-direction: column;
+    align-items: flex-start;
+    padding-bottom: 0;
+    /* background-color: cyan; */
+  }
+
+  #contact .card-contact .contact-item h4 {
+    /* background-color: red; */
+    width: auto;
+    font-size: 16px;
+  }
+
+  #contact .card-contact .contact-item p {
+    text-align: justify;
+    font-size: 14px;
+  }
+
+  #contact .card-contact .contact-item p .links:active {
+    text-decoration: underline;
+  }
+
+  #contact .card-form {
+    height: 586px;
+    width: 100%;
+    background-color: #fff;
+    border-radius: 24px;
+    position: relative;
+  }
+
+  #contact .card-form .accent-pills {
+    width: 180px;
+    height: 50px;
+  }
+
+  #contact .card-form .accent-pills p {
+    line-height: 50px;
+    font-size: 14px;
+  }
+
+  #contact .card-form .custom-form {
+    width: 100%;
+    height: 100%;
+    padding: 20px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* background-color: red; */
+  }
+
+  #contact .card-form .custom-form .controlled-form {
+    width: 85%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    /* background-color: coral; */
+  }
+
+  #contact .card-form .custom-form .controlled-form .custom-label {
+    font-size: 14px;
+    font-weight: 500;
+    margin-bottom: 10px;
+  }
+
+  #contact .card-form .custom-form .controlled-form .custom-input {
+    padding: 20px;
+    font-size: 16px;
+    height: 48px;
+  }
+
+  #contact .card-form .custom-form .controlled-form .custom-textarea {
+    height: 138px;
+  }
+
+  #contact .card-form .custom-form .btn-kontak {
+    width: 45%;
+    font-size: 14px;
+    height: 42px;
+  }
+
+  #contact .card-form .custom-form .btn-kontak:active {
+    background-color: var(--dark-100);
+    transition: 0.3s all ease-in-out;
+  }
+
+  /* Footer Style */
+  footer {
+    height: 200px;
+    display: flex;
+    align-items: center;
+    position: relative;
+  }
+
+  footer .footer-content {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    /* background-color: lightseagreen; */
+  }
+
+  footer .footer-content .footer-brand {
+    font-size: 24px;
+    font-weight: 700;
+    text-decoration: none;
+    color: #fff;
+  }
+
+  footer .footer-content .footer-links {
+    padding-top: 8px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* background-color: orange; */
+  }
+
+  footer .footer-content .footer-links ul {
+    width: 100%;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* background-color: red; */
+    gap: 24px;
+  }
+
+  footer .footer-content .footer-links ul li {
+    width: 100%;
+    font-size: 14px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    /* background-color: lightgreen; */
+  }
+
+  footer .footer-content .footer-links ul li a:active {
+    color: var(--gray-100);
+  }
+
+  footer .copyright {
+    /* background-color: red; */
+    width: 100%;
+    text-align: center;
+    font-size: 14px;
+    position: absolute;
+    top: 85%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
