--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -562,7 +562,7 @@
     text-decoration: none;
     font-family: var(--montserrat);
     font-weight: 600;
-    font-size: 14px;
+    font-size: 16px;
     color: var(--dark-100);
   }
 
@@ -651,7 +651,7 @@
 
   #services .layanan .card-service {
     width: 100%;
-    height: 480px;
+    height: auto;
   }
 
   #services .layanan .card-service .c-head {
@@ -738,11 +738,11 @@
 
   #about .biography .bio-text h3 {
     font-size: 32px;
-    margin-bottom: 24px;
+    margin-bottom: 28px;
   }
 
   #about .biography .bio-text p {
-    max-width: 350px;
+    max-width: 420px;
     font-size: 18px;
     line-height: 28px;
   }
@@ -884,7 +884,7 @@
   }
 
   footer .footer-content .footer-links {
-    padding-top: 8px;
+    padding: 12px;
     width: 100%;
     height: 100%;
     display: flex;
