--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -537,7 +537,7 @@ nav .navbar-flex .navigation-social-media a img {
 
 /* Gallery */
 #gallery {
-  padding: 100px 0 60px 0;
+  padding: 120px 0 60px 0;
   /* background: #F1F1F1; */
 }
 
@@ -583,6 +583,84 @@ figcaption {
   padding: .2em .5em;
   justify-self: start;
 }
+
+/* Categories */
+#categories {
+  padding: 120px 0 60px 0;
+  /* background: #F1F1F1; */
+}
+
+#categories h2 {
+  font-size: 28px;
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+#categories .categories-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1 0 100%;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+#categories .categories-wrapper .category {
+  width: 630px;
+  height: 305px;
+  border-radius: 12px;
+  overflow: hidden;
+  background-color: var(--gray-100);
+  position: relative;
+  transition: all 0.3s ease-in-out;
+}
+
+#categories .categories-wrapper .category:hover {  
+  opacity: 80%;
+}
+
+#categories .categories-wrapper .category img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+#categories .categories-wrapper .category .inside-content {
+  visibility: hidden;
+  opacity: 0;
+  width: 100%;
+  height: 80px;
+  background-color: var(--dark-100);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0.6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.1s ease-in-out;
+}
+
+#categories .categories-wrapper .category:hover .inside-content {
+  visibility: visible;
+  transition: all 0.1s ease-in-out;
+  opacity: 80%;
+}
+
+#categories .categories-wrapper .category .inside-content p {
+  font-size: 28px;
+  text-align: center;
+  color: #fff;
+  margin: auto;
+  font-family: var(--lora);
+  font-weight: 700;
+}
+
+
+
+
 
 /* Footer Style */
 footer {
